<resources>
    <string name="app_name">Meldezettel</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="serviceURL">Service URL</string>
    <string name="mandate">Mandate</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Get data</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="location">location</string>
    <string name="Bemerkung">remark</string>
    <string name="infoReparatur">Repair requirement</string>
    <string name="infoReinigung">Cleaning requirement</string>
    <string name="lblAppName">Meldezettel</string>
    <string name="infoLampe">Broken bulb</string>
    <string name="infoSonstig">Other Repairs</string>
    <string name="infoSanitär">Repair in sanitary area</string>
    <string name="infoDefekt">Defective door or window</string>
    <string name="infoUndicht">Leaking container or fitting</string>
    <string name="infoBoden">Floor cleaning</string>
    <string name="infoGlas">Glass cleaning</string>
    <string name="infoSpezial">Special cleaning</string>
    <string name="infoHoch">Working at heights</string>
    <string name="infoVerschlossen">Room closed or occupied</string>
    <string name="bedarf_repair">Repair requirement</string>
    <string name="bedarf_cleaning">Cleaning requirement</string>
    <string name="sanitary">Repair in sanitary area</string>
    <string name="window_door">Defective door or window</string>
    <string name="other">Other Repairs</string>
    <string name="lamp">Broken bulb</string>
    <string name="container">Leaking container or fitting</string>
    <string name="sealed">Room closed or occupied</string>
    <string name="window_door_rei">Glass cleaning</string>
    <string name="special">Special cleaning</string>
    <string name="floor">Floor cleaning</string>
    <string name="hight">Working at heights</string>
    <string name="task_force_rei">ISS Cleaning</string>
    <string name="task_force_rep">ISS Facility Coordinators</string>
    <string name="subject">Incident Reporting</string>
    <string name="content0">Dear Sir or Madam,</string>
    <string name="content1">May I ask you to open a new ticket with the following parameters.</string>
    <string name="content2">Nature of Message:  </string>
    <string name="content3">Notifying person.:  </string>
    <string name="content4">Request:  </string>
    <string name="content5">Task force:  </string>
    <string name="content6">Task:  </string>
    <string name="content7">Location:  </string>
    <string name="content8">Remarks:  </string>
    <string name="from">Sender</string>
    <string name="from_text">Please enter your sender email</string>
    <string name="to1">Receiver 1</string>
    <string name="to1_text">Please enter the recipient email</string>
    <string name="to2">Receiver 2</string>
    <string name="to2_text">You may add an additional recipient email</string>
    <string name="no_mail_client">No mail cllient installed</string>
    <string name="send_mail">send mail</string>
    <string name="content9">Room:</string>
    <string name="fresh_button">load</string>
</resources>
