<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/second_activity_v2"
    android:id="@+id/rei">



    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="360dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        android:layout_height="60dp"
        tools:ignore="MissingConstraints"
        tools:targetApi="lollipop" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/repk_lampe"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription=""
        tools:ignore="ContentDescription"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.1" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/infoLampe"
        android:textColor="#ff000000"
        android:text="@string/infoLampe"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView3"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintHorizontal_bias="0.33" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:src="@drawable/repk_behaelter"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="ContentDescription"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/infoUndicht"
        android:id="@+id/infoUndicht"
        android:textColor="#ff000000"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/infoLampe"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView4"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.25" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView5"
        android:src="@drawable/repk_sanitaer_grau"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="ContentDescription"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/infoSanitär"
        android:id="@+id/infoSanitär"
        android:textColor="#ff000000"
        android:singleLine="false"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/infoUndicht"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView5"
        android:layout_marginLeft="24dp"
        tools:ignore="Deprecated"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.25" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView6"
        android:src="@drawable/repk_tuerfenster"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="ContentDescription"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/infoDefekt"
        android:id="@+id/infoDefekt"
        android:textColor="#ff000000"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/infoSanitär"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView6"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.25" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView7"
        android:src="@drawable/repk_sonstige_grau"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="ContentDescription"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/infoSonstig"
        android:id="@+id/infoSonstig"
        android:textColor="#ff000000"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/infoDefekt"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView7"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.25" />
</android.support.constraint.ConstraintLayout>
